Added project field at the registration form in order for the new user to specify the project he/she is related with. Moreover, added a limited file size and format when using the file service module

--- a/eve-catalogue-gui/src/app/files-service/files-service.component.html
+++ b/eve-catalogue-gui/src/app/files-service/files-service.component.html
@@ -1,4 +1,4 @@
-<!-- <app-catalogue-sub-toolbar></app-catalogue-sub-toolbar> -->
+<app-catalogue-sub-toolbar></app-catalogue-sub-toolbar>
 
 <div class="contentBlock" style="background: transparent; padding: 30px; padding-bottom: 10%;">
     <!-- Action buttons -->
