--- a/eve-catalogue-gui/src/app/login/login.component.html
+++ b/eve-catalogue-gui/src/app/login/login.component.html
@@ -74,6 +74,12 @@
                 </button>
                 <mat-error *ngIf="registrationFormGroup.get('regPassword').hasError('minlength')">Password must be at least 6 characters long</mat-error>
             </mat-form-field>
+
+            <mat-form-field appearance="outline" color=primary class="rules-full-width">
+                <mat-label>Project</mat-label>
+                <input  matInput  formControlName="project" placeholder="What project do you belong to?"  name="fname"  required>
+            </mat-form-field>
+
             <div class="margin-top">
                 <button mat-raised-button color="accent" class="margin-all" (click)="register();">Submit</button>
             </div>
