Fix on error visualization

--- a/eve-catalogue-gui/src/app/side-top-bar/side-top-bar.component.html
+++ b/eve-catalogue-gui/src/app/side-top-bar/side-top-bar.component.html
@@ -111,7 +111,7 @@
       <div mat-line style="float: left">
         <img src="assets/images/eu.png" class="logo_footer" width="15%">
         <p class="text_in_footer" style="margin-top:-5px;">
-        5G EVE <a href="www.5g-eve.eu" target="_blank" style="color: rgba(255, 255, 255, 0.7);">(www.5g-eve.eu)</a> project has received funding from the European Horizon 2020 Programme for research, technological development and demonstration under grant agreement n° 815074
+        5G EVE <a href="http://www.5g-eve.eu" target="_blank" style="color: rgba(255, 255, 255, 0.7);">(www.5g-eve.eu)</a> project has received funding from the European Horizon 2020 Programme for research, technological development and demonstration under grant agreement n° 815074
       </p>
     </div>
 </div>
