--- a/eve-catalogue-gui/src/app/experiments-details/experiments-details.component.html
+++ b/eve-catalogue-gui/src/app/experiments-details/experiments-details.component.html
@@ -70,7 +70,7 @@
           <th mat-header-cell *matHeaderCellDef> Report </th>
           <td mat-cell *matCellDef="let element">
             <mat-button-toggle-group name="operations" aria-label="Operations" class="margin-all">
-              <mat-button-toggle value="results" (click)="openResultsDialog(element.reportUrl);"><mat-icon>multiline_chart</mat-icon></mat-button-toggle>
+              <mat-button-toggle value="results" *ngIf="element.state == 'COMPLETED'" (click)="openResultsDialog(element.reportUrl);"><mat-icon>multiline_chart</mat-icon></mat-button-toggle>
             </mat-button-toggle-group>
           </td>
         </ng-container>
@@ -80,7 +80,7 @@
             <td mat-cell *matCellDef="let element">
                 <mat-chip-list class="mat-chip-list-stacked" aria-orientation="vertical" *ngFor="let tc of element.testCaseResult | keyvalue">
                     <mat-chip style="background-color: green;" *ngIf="tc.value.resultCode == 'SUCCESSFUL'">Test Case {{tc.value.testCaseName}}</mat-chip>
-                    <mat-chip style="background-color: red;" *ngIf="tc.value.resultCode == 'FAILED'">Test Case {{tc.value.testCaseName}}</mat-chip>
+                    <mat-chip style="background-color: red;" *ngIf="tc.value.resultCode == 'FAILED'" title="{{tc.value.result}}">{{tc.value.testCaseName}}</mat-chip>
                 </mat-chip-list>
                 <!--tr *ngFor="let tc of element.testCaseResult | keyvalue">Test Case {{tc.key}} : {{tc.value.result}} </tr-->
             </td>
