--- a/eve-catalogue-gui/src/app/experiments/experiments.component.html
+++ b/eve-catalogue-gui/src/app/experiments/experiments.component.html
@@ -60,7 +60,7 @@
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row">
             <mat-button-toggle-group name="operations" aria-label="Operations" class="margin-all">
-              <mat-button-toggle value="instantiate" *ngIf="getRole().indexOf('EXPERIMENTER') >= 0 && ((row.status).indexOf('READY') >= 0 || (row.status).indexOf('INSTANTIATED') >= 0);" (click)="openExecDialog(row.experimentId, row.status);"><mat-icon>launch</mat-icon></mat-button-toggle>
+              <mat-button-toggle value="instantiate" *ngIf="getRole().indexOf('EXPERIMENTER') >= 0 && ((row.status).indexOf('READY') >= 0 || (row.status).indexOf('INSTANTIATED') >= 0);" (click)="openExecDialog(row.experimentId, row.status, row.experimentDescriptorId);"><mat-icon>launch</mat-icon></mat-button-toggle>
               <!--mat-button-toggle value="activate" *ngIf="getRole().indexOf('EXPERIMENTER') >= 0 && (row.status).indexOf('INSTANTIATED') >= 0;"><mat-icon>play_arrow</mat-icon></mat-button-toggle-->
               <!--mat-button-toggle value="monitor" *ngIf="getRole().indexOf('EXPERIMENTER') >= 0;"><mat-icon>network_check</mat-icon></mat-button-toggle-->
               <!-- <mat-button-toggle value="results" *ngIf="(row.status).indexOf('TERMINATED') >= 0 || (row.status).indexOf('INSTANTIATED') >= 0;" (click)="openResultsDialog(row.experimentId, row.status, row.executions);"><mat-icon>multiline_chart</mat-icon></mat-button-toggle> -->
