--- a/eve-catalogue-gui/src/app/dashboard/dashboard.component.html
+++ b/eve-catalogue-gui/src/app/dashboard/dashboard.component.html
@@ -77,7 +77,7 @@
     </div>
 </div>
 <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxLayoutWrap fxLayoutGap="1%" fxLayoutAlign="center center" style="margin-top: 1%;">
-    <div fxFlex="20%" fxFlex.xs="100%" fxFlex.sm="50%" class="dash-container" [matBadge]="5" matBadgeSize="large" matBadgeOverlap="true" matBadgePosition="above after" matBadgeColor="warn">
+    <div fxFlex="20%" fxFlex.xs="100%" fxFlex.sm="50%" class="dash-container">
         <button class="card-actions" mat-button (click)="goTo('./support_schemas');">
             <div fxFlex="30%" fxHide.xs style="text-align: left;"><img src="../../assets/images/library_books_white.png" class="card-image"></div>
             <div fxFlex="70%" >
@@ -88,4 +88,5 @@
             </div>
         </button> 
     </div>
+    <div fxFlex="20%" fxFlex.xs="100%" fxFlex.sm="50%"></div>
     </div>
