--- a/eve-catalogue-gui/src/app/support-tools-nsd/support-tools-nsd.component.html
+++ b/eve-catalogue-gui/src/app/support-tools-nsd/support-tools-nsd.component.html
@@ -5,11 +5,10 @@
   <div style="padding: 30px;" class="desch-container">
     <div class="rules-div rules-div-xs rules-div-md" fxFlex="100%"  fxLayout.xs="column" fxLayout="column" fxLayoutAlign="left left">
         <form [formGroup]="firstFormGroup">
-            <input #blueprintFile type="file" formControlName="firstCtrl" (change)="onUploadedVsb($event,blueprintFile.files)" required/>
+            <input #blueprintFile type="file" formControlName="firstCtrl" (change)="onUploadedBlueprint($event,blueprintFile.files)" required/>
             <div class="margin-top">
-                <button mat-raised-button (click)="dynamicDownloadJson()" color="primary" class="margin-all" [disabled]="firstFormGroup.invalid">Download</button>
+                <button mat-raised-button (click)="dynamicDownloadJson()" color="primary" class="margin-all" [disabled]="firstFormGroup.invalid" id="download" >Download</button>
             </div>
         </form>
-<!--<a (click)="dynamicDownloadJson()" >download JSON</a>-->
 </div>
 </div>
