--- a/eve-catalogue-gui/src/app/support-tools-schemas/support-tools-schemas.component.html
+++ b/eve-catalogue-gui/src/app/support-tools-schemas/support-tools-schemas.component.html
@@ -18,8 +18,8 @@
           <th mat-header-cell *matHeaderCellDef>Actions</th>
           <td mat-cell *matCellDef="let element">
             <mat-button-toggle-group name="operations" aria-label="Operations" class="margin-all">
-              <mat-button-toggle  style="background-color: #b3b3b3;"  (click)="downloadBlueprint(element.id);"><mat-icon >cloud_download</mat-icon></mat-button-toggle>
-              <mat-button-toggle  style="background-color: #b3b3b3;" value="view_blueprint" ><mat-icon>remove_red_eye</mat-icon></mat-button-toggle>
+              <mat-button-toggle  style="background-color: #b3b3b3;"  (click)="dynamicDownloadJson(element.id);"><mat-icon >cloud_download</mat-icon></mat-button-toggle>
+              <mat-button-toggle  style="background-color: #b3b3b3;display: none;" value="view_blueprint" ><mat-icon>remove_red_eye</mat-icon></mat-button-toggle>
 
             </mat-button-toggle-group>
           </td>
