Fix on translation rules for VSB and CTX

--- a/eve-catalogue-gui/src/app/nfv-components/nfv-ns/nfv-ns.component.html
+++ b/eve-catalogue-gui/src/app/nfv-components/nfv-ns/nfv-ns.component.html
@@ -2,7 +2,7 @@
 <mat-toolbar style="background: transparent;">
   <span style="margin-left: 15px;"><h1 class="mat-h1">NS Descriptors</h1></span>
 </mat-toolbar>
-<div height="100%" style="background: transparent; padding: 30px;">
+<div height="100%" style="background: transparent; padding: 30px; padding-bottom: 10%;">
   <table mat-table class="full-width-table" matSort aria-label="Elements" height="100%">
     <!-- Name Column -->
     <ng-container matColumnDef="name">
