--- a/eve-catalogue-gui/src/app/experiment-sub-toolbar/experiment-sub-toolbar.component.html
+++ b/eve-catalogue-gui/src/app/experiment-sub-toolbar/experiment-sub-toolbar.component.html
@@ -7,9 +7,9 @@
     -->
     <span><button mat-button routerLink="/home"><mat-icon style="margin-bottom: 6px;">home</mat-icon> Home </button></span>
     <span><button mat-button routerLink="/tickets"><mat-icon>list</mat-icon> Tickets </button></span>
-    <span><button mat-button routerLink="/experiments" *ngIf="getRole().indexOf('SITE_MANAGER') >= 0;"><mat-icon>build</mat-icon> Experiments </button></span>
+    <span><button mat-button routerLink="/experiments" *ngIf="getRole() !== null && getRole().indexOf('SITE_MANAGER') >= 0;"><mat-icon>build</mat-icon> Experiments </button></span>
     <span><button mat-button (click)="backClicked();"><mat-icon>arrow_back</mat-icon> Back </button></span>
     <span class="fill-remaining-space"></span>
-    <span *ngIf="getRole().indexOf('EXPERIMENTER') >= 0;"><img src="../../assets/images/kd-ic-Orchestrator-red.png" class="logo"></span>
-    <span *ngIf="getRole().indexOf('SITE_MANAGER') >= 0;"><img src="../../assets/images/kd-ic-virtual-net-blue.png" class="logo"></span>
+    <span *ngIf="getRole() !== null && getRole().indexOf('EXPERIMENTER') >= 0;"><img src="../../assets/images/kd-ic-Orchestrator-red.png" class="logo"></span>
+    <span *ngIf="getRole() !== null && getRole().indexOf('SITE_MANAGER') >= 0;"><img src="../../assets/images/kd-ic-virtual-net-blue.png" class="logo"></span>
 </mat-toolbar>
