Added file system management page together with some improvements about supporting ipad resolution on both file system service and ticketing system

--- a/eve-catalogue-gui/src/app/ticketing-system/ticketing-system.component.css
+++ b/eve-catalogue-gui/src/app/ticketing-system/ticketing-system.component.css
@@ -81,3 +81,11 @@ table {
 .my-spinner{
   margin: auto;
 }
+
+.ticket-summary{
+  width: 30%;
+}
+
+.ticket-summary-text{
+  text-overflow: ellipsis;
+}
