--- a/eve-catalogue-gui/src/app/ticketing-system/ticketing-system.component.html
+++ b/eve-catalogue-gui/src/app/ticketing-system/ticketing-system.component.html
@@ -28,10 +28,12 @@
             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
+        <!--
         <ng-container matColumnDef="product">
             <th mat-header-cell *matHeaderCellDef> Product </th>
             <td mat-cell *matCellDef="let element"> {{element.product}} </td>
         </ng-container>
+        -->
 
         <ng-container matColumnDef="component">
             <th mat-header-cell *matHeaderCellDef fxShow.xs="false"> Component </th>
@@ -44,8 +46,8 @@
         </ng-container>
 
         <ng-container matColumnDef="summary">
-            <th mat-header-cell *matHeaderCellDef fxShow.xs="false"> Summary </th>
-            <td mat-cell *matCellDef="let element" fxShow.xs="false"> {{element.summary}} </td>
+            <th mat-header-cell *matHeaderCellDef fxShow.xs="false" class="ticket-summary"> Summary </th>
+            <td mat-cell *matCellDef="let element" fxShow.xs="false" class="ticket-summary-text"> {{element.summary}} </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
