--- a/eve-catalogue-gui/src/app/catalogue-sub-toolbar/catalogue-sub-toolbar.component.html
+++ b/eve-catalogue-gui/src/app/catalogue-sub-toolbar/catalogue-sub-toolbar.component.html
@@ -4,15 +4,15 @@
     <mat-menu #user_menu="matMenu">
         <button mat-menu-item (click)="logout();">Logout</button>
     </mat-menu>
-    
+
     <span><button mat-button routerLink="/tickets"><mat-icon>list</mat-icon> Tickets </button></span>
 -->
     <span>
         <button mat-button routerLink="/home">
-            <mat-icon style="margin-bottom: 6px;">home</mat-icon> Home 
+            <mat-icon style="margin-bottom: 6px;">home</mat-icon> Home
         </button>
     </span>
-    <span *ngIf="getRole().indexOf('DESIGNER') >= 0;">
+    <span *ngIf="getRole() !== null && getRole().indexOf('DESIGNER') >= 0;">
         <button mat-button [matMenuTriggerFor]="blueprints_menu">
             Blueprints <mat-icon>keyboard_arrow_down</mat-icon>
         </button>
@@ -22,10 +22,10 @@
             Descriptors <mat-icon>keyboard_arrow_down</mat-icon>
         </button>
     </span>
-    <span><button mat-button (click)="backClicked();"><mat-icon>arrow_back</mat-icon> Back </button></span>    
+    <span><button mat-button (click)="backClicked();"><mat-icon>arrow_back</mat-icon> Back </button></span>
     <span class="fill-remaining-space"></span>
-    <span *ngIf="getRole().indexOf('DESIGNER') >= 0;"><img src="../../assets/images/kd-ic-sdk-green.png" class="logo"></span>
-    <span *ngIf="getRole().indexOf('EXPERIMENTER') >= 0;"><img src="../../assets/images/kd-ic-slicer-amber.png" class="logo"></span>
+    <span *ngIf="getRole() !== null && getRole().indexOf('DESIGNER') >= 0;"><img src="../../assets/images/kd-ic-sdk-green.png" class="logo"></span>
+    <span *ngIf="getRole() !== null && getRole().indexOf('EXPERIMENTER') >= 0;"><img src="../../assets/images/kd-ic-slicer-amber.png" class="logo"></span>
     <!--span>
         <button mat-button [matMenuTriggerFor]="nfv_menu">
             NFV <mat-icon>keyboard_arrow_down</mat-icon>
