--- a/eve-catalogue-gui/src/app/files-service-second/files-service-second.component.html
+++ b/eve-catalogue-gui/src/app/files-service-second/files-service-second.component.html
@@ -1,3 +1,5 @@
+<app-catalogue-sub-toolbar></app-catalogue-sub-toolbar>
+
 <div style="background: #b3b3b3; padding: 30px; padding-bottom: 10%;">
     <section class="mat-typography title-group">
         <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
