--- a/eve-catalogue-gui/src/app/support-tools-schemas/support-tools-schemas.component.html
+++ b/eve-catalogue-gui/src/app/support-tools-schemas/support-tools-schemas.component.html
@@ -40,5 +40,10 @@
       <app-support-tools-composer></app-support-tools-composer> 
     </div>
   </mat-tab>
+  <mat-tab  class="blvs-table" label="Validation" fxFlex="100%"  fxLayout.xs="column" fxLayout="row" fxLayoutAlign="center center">
+    <div style="padding: 30px;" >
+      <app-support-tools-validation></app-support-tools-validation> 
+    </div>
+  </mat-tab>
 </mat-tab-group>
 
