update on footer links

--- a/eve-catalogue-gui/src/app/side-top-bar/side-top-bar.component.html
+++ b/eve-catalogue-gui/src/app/side-top-bar/side-top-bar.component.html
@@ -79,8 +79,8 @@
       </div>
       <div mat-line  style="width: 10%;">
         <div mat-line style="width: 25%;" >
-          <a href="https://5g-eve-support.slack.com" target="_blank" class="icon_social_link"  >
-          <span class="iconify icon_social" data-icon="mdi-slack" data-inline="false" style="width: 27px;" ></span>
+          <a href="https://www.5g-eve.eu/news/" target="_blank" class="icon_social_link"  >
+          <span class="iconify icon_social" data-icon="mdi-public" data-inline="false" style="width: 27px;" ></span>
         <!-- <p class="text_in_footer" style="margin-top: 5%;">slack</p> -->
         </a>
       &nbsp;&nbsp;&nbsp;
