--- a/eve-catalogue-gui/src/app/sites-switch/sites-switch.component.html
+++ b/eve-catalogue-gui/src/app/sites-switch/sites-switch.component.html
@@ -16,8 +16,10 @@
    <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxLayoutWrap fxLayoutGap="1%" fxLayoutAlign="center center" style="margin-top: 1%">
     <div *ngFor="let card of cardsRow2"  fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%" class="experiment-switch-container box" style="background-color:#0277BD;padding: 3%;"  fxLayout.xs="column" fxLayoutWrap fxLayoutGap="1%" fxLayoutAlign="center center">
         <button class="card-actions" mat-button  style="height: 100%;" (click)="goTo(card.path);">
-            <div fxFlex="20%" fxFlex.sm="10%" fxFlex.xs="20%" style="text-align: left;max-width: 40%;">
-                <img src={{card.icon}} class="card-image" >
+            <div fxFlex="20%" fxFlex.sm="10%" fxFlex.xs="20%" style="text-align: left; max-width: 40%;">
+              <span class="material-icons">
+                cloud_queue
+                </span>
             </div>
             <div fxFlex="80%" fxFlex.sm="90%" fxFlex.xs="80%" style="text-align: right;">
                 <b >{{card.title}}</b>
