--- a/eve-catalogue-gui/src/app/experiments-details/experiments-details.component.html
+++ b/eve-catalogue-gui/src/app/experiments-details/experiments-details.component.html
@@ -49,7 +49,7 @@
           <th fxHide.xs mat-header-cell *matHeaderCellDef> Report </th>
           <td fxHide.xs mat-cell *matCellDef="let element">
             <mat-button-toggle-group name="operations" aria-label="Operations" class="margin-all">
-              <mat-button-toggle value="results" (click)="openResultsDialog(element.reportUrl);" class="exd-table"><mat-icon >multiline_chart</mat-icon></mat-button-toggle>
+              <mat-button-toggle *ngIf="element.state !== 'FAILED'" value="results" (click)="openResultsDialog(element.reportUrl);" class="exd-table"><mat-icon>multiline_chart</mat-icon></mat-button-toggle>
             </mat-button-toggle-group>
           </td>
         </ng-container>
@@ -69,54 +69,5 @@
         <tr mat-row *matRowDef="let row; columns: executionsColumns;"></tr>
     </table>
     </div>
-<!--
-    <table mat-table [dataSource]="executions" class="full-width-table exd-table">
-        <h3>Executions</h3>
-
-
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> Execution </th>
-          <td mat-cell *matCellDef="let element"> {{element.executionName}} </td>
-        </ng-container>
-
-
-        <ng-container matColumnDef="state">
-            <th mat-header-cell *matHeaderCellDef> State </th>
-            <td mat-cell *matCellDef="let element"> {{element.state}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="reportUrl" style="background: transparent; padding-left: 30px;">
-          <th mat-header-cell *matHeaderCellDef> Report </th>
-          <td mat-cell *matCellDef="let element">
-            <mat-button-toggle-group name="operations" aria-label="Operations" class="margin-all">
-              <mat-button-toggle value="results" (click)="openResultsDialog(element.reportUrl);"><mat-icon>multiline_chart</mat-icon></mat-button-toggle>
-            </mat-button-toggle-group>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="tcr">
-            <th mat-header-cell *matHeaderCellDef> Test Case Results </th>
-            <td mat-cell *matCellDef="let element">
-                <mat-chip-list class="mat-chip-list-stacked" aria-orientation="vertical" *ngFor="let tc of element.testCaseResult | keyvalue">
-                    <mat-chip style="background-color: green;" *ngIf="tc.value.resultCode == 'SUCCESSFUL'">Test Case {{tc.value.testCaseName}}</mat-chip>
-                    <mat-chip style="background-color: red;" *ngIf="tc.value.resultCode == 'FAILED'">Test Case {{tc.value.testCaseName}}</mat-chip>
-                </mat-chip-list>
-                
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="executionsColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: executionsColumns;"></tr>
-    </table>
-
-    <mat-paginator #paginator  style="width: 100%;margin-top: 3%;" fxFlex="100%" fxLayout.xs="row" fxLayout="column" fxLayoutAlign="center center"
-        [length]="dataSource?.data.length"
-        [pageIndex]="0"
-        [pageSize]="50"
-        [pageSizeOptions]="[25, 50, 100, 250]"
-        class="exd-table"
-       >
-    </mat-paginator>
--->
 </div>
 </div>
