--- a/eve-catalogue-gui/src/app/blueprints-compnents/blueprints-e-stepper/blueprints-e-stepper.component.html
+++ b/eve-catalogue-gui/src/app/blueprints-compnents/blueprints-e-stepper/blueprints-e-stepper.component.html
@@ -32,8 +32,48 @@
     </mat-step>
     <mat-step [stepControl]="firstFormGroup">
         <form [formGroup]="firstFormGroup" class="data-form" >
+       
             <ng-template matStepLabel>VSB Selection</ng-template>
-     
+ 
+            <mat-form-field class="data-full-width">
+                <input type="text"
+                       placeholder="Select Blueprint"
+                       aria-label="Number"
+                       matInput
+                       [formControl]="myControl"
+                       [matAutocomplete]="auto"
+                       style="cursor: pointer;">
+                <mat-autocomplete #auto="matAutocomplete">
+                  <mat-option *ngFor="let option of filteredOptions | async" [value]="option.viewValue" (onSelectionChange)="onVsbSelected($event,option.value);">
+                    {{option.viewValue}}
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
+                <!--
+            <mat-form-field appearance="outline" class="data-full-width">
+                <mat-label>VSB</mat-label>
+                <mat-select formControlName="selectVsbCtrl" name="vsb" (selectionChange)="onVsbSelected($event);">
+                    <mat-option *ngFor="let vsb of getAllVsBlueprints()" [value]="vsb.value">
+                        {{vsb.viewValue}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        -->
+
+                <div *ngFor="let blue of bluePrintsAssosiate" style="color: black;margin-bottom: 70px;">
+                    <b>{{blue.associatedVsbId}}</b>
+                    <mat-form-field appearance="outline" class="data-full-width">
+                        <mat-label>Site</mat-label>
+                        <mat-select formControlName="selectSiteCtrl" name="site" (selectionChange)="onSiteSelected($event);">
+                            <mat-option *ngFor="let site of sites" [value]="site.value" #siteSelected>
+                                {{site.viewValue}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>  
+                </div>
+            
+   <!--
+  
             <mat-form-field class="data-full-width">
                 <input type="text"
                        placeholder="Select Blueprint"
@@ -47,7 +87,20 @@
                   </mat-option>
                 </mat-autocomplete>
               </mat-form-field>
-            <!--
+            -->
+
+                <!--
+              <div *ngFor="let blue of bluePrintsAssosiate">
+                <mat-form-field appearance="outline" class="data-full-width">
+                    <mat-label>bkue 1</mat-label>
+                    <mat-select formControlName="selectSiteCtrl" name="site" (selectionChange)="onSiteSelected($event);">
+                        <mat-option *ngFor="let site of sites" [value]="site.value" #siteSelected>
+                            {{site.viewValue}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+              </div>
+          
             <mat-form-field appearance="outline" class="data-full-width">
                 <mat-label>Site</mat-label>
                 <mat-select formControlName="selectSiteCtrl" name="site" (selectionChange)="onSiteSelected($event);">
@@ -66,19 +119,20 @@
                 </mat-select>
             </mat-form-field>
 -->
-            <div class="margin-top"></div>
+            <div style="margin-top: 50px;">
             <p> Blueprint Name: {{expBlueprintName}}</p>
             <p> Selected Site: {{selectedSite}}</p>
             <p> Selected VSB: {{selectedVsb}}</p>
+        </div>
             <div class="margin-top">
                 <button mat-raised-button matStepperPrevious color="primary" class="margin-all">Back</button>
                 <button mat-raised-button matStepperNext color="primary" class="margin-all" [disabled]="firstFormGroup.invalid">Next</button>
             </div>
         </form>
     </mat-step>
+    <div *ngIf="!interSite">
     <mat-step [stepControl]="secondFormGroup">
         <form [formGroup]="secondFormGroup" class="data-form">
-
             <ng-template matStepLabel>CB Selection</ng-template>
             <mat-checkbox (change)="disableCtxb($event);" style="color: black;">No Context Blueprints</mat-checkbox>
             <mat-radio-group formControlName="selectCbsCtrl" *ngFor="let cb of filterCtxbsInSite(); let i=index" class="flex-column" (change)="onSelectedCb($event)" id="ctxbChoise">
@@ -96,6 +150,7 @@
             </div>
         </form>
     </mat-step>
+    </div>
     <mat-step [stepControl]="thirdFormGroup" class="data-form">
         <form [formGroup]="thirdFormGroup">
             <ng-template matStepLabel>NSD Onboarding</ng-template>
@@ -263,6 +318,23 @@
                                 </mat-form-field>
                               </td>
                         </tr>
+                        <div *ngIf="interSite">
+                            <tr>
+                                <td fxFlex="33%"  fxLayout.xs="column" fxLayout="column" fxLayoutAlign="center center">
+                                    <mat-form-field appearance="outline" class="data-full-width">
+                                        <mat-label>Site</mat-label>
+                                        <mat-select formControlName="metricSelectSite" name="site" (selectionChange)="onSiteSelected($event);">
+                                            <mat-option *ngFor="let site of sites" [value]="site.value">
+                                                {{site.viewValue}}
+                                            </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </div>
+     
                     </div>
                 </div>
                 <tr>
